--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcryptjs": "^3.0.2",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "nodemon": "^3.1.9"
   }
